# multiplex-image-model

./: .gitignore  CLAUDE.md  README.md  create_symlinks.py  pyproject.toml  requirements.txt  run_embed.py  run_validation_leave_one_out.py  setup_venv.sh  split_data.ipynb  summary_pl.py  train.sh  train_masked_config.yaml  train_masked_config_base.yaml  train_masked_config_large.yaml  train_masked_config_small.yaml  train_masked_equivariant_config.yaml  train_masked_equivariant_config_impainting.yaml  train_masked_equivariant_config_old_loader.yaml  train_masked_equivariant_config_old_loader_backup.yaml  train_masked_equivariant_config_old_loader_impainting.yaml  train_masked_gp_config.yaml  train_masked_gp_marker_config.yaml  train_masked_learnmask_config.yaml  train_masked_model.py  train_masked_model_gp.py  train_masked_model_impainting.py  train_masked_model_learnmask.py  train_masked_model_old_loader.py  train_masked_model_old_loader_backup.py  train_masked_model_old_loader_impainting.py
JakubGiezgala/: generate_embeddings.py  generate_kacper.py  get_model.py  tiff_normalization.py  train_vit.py
JakubGiezgala/Configs/: Swin_benchmark.yaml
abmil/: run_abmill_all_models.sh
abmil/models/ABMIL/: gated_abmil.py
abmil/src/: run_abmil.py
celltyping/: .env.example  README.md  cell_typing.ipynb  pyproject.toml
celltyping/cords/: cords_config.yaml  data.py  figures.py  subsample.py
celltyping/core/: bar_plot.py  crossval.py  data.py
celltyping/core/embeddings/: context.py  inference.py  patch.py
celltyping/core/models/: eva.py  evaours.py  immuvis.py  immuvis_vp.py  registry.yaml  virtues.py  virtues_config.yaml  virtuesours.py  virtuesours_arcsinh.py
celltyping/core/utils/: __init__.py  get_virtues_marker_embeddings.py  immuvis.py  load_config.py  virtues.py
celltyping/danenberg/: data.py  dberg_config.yaml  figures.py  subsample.py
celltyping/gold_standard/: data.py  figures.py  gs_config.yaml
configs/: all_markers_tokenizer.yaml  all_panels_config.yaml  cell_hierarchy.yaml  celltypes_tokenizer.yaml  marker_ds_stats.csv  train_masked_config_base.yaml  train_masked_config_large.yaml  train_masked_config_small.yaml  train_swin_config.yaml  train_vit_config.yaml
docs/superpowers/plans/: 2026-04-03-kronecker-marker-covariance.md  2026-04-27-kronecker-learnmask.md
docs/superpowers/specs/: 2026-04-03-kronecker-marker-covariance-design.md  2026-04-27-kronecker-learnmask-design.md
evaluation/gated_abmil/: run_abmill_all_models.sh
evaluation/gated_abmil/results/immuvis_475/: abmil_2losses_cv_folds.csv  abmil_2losses_cv_summary_auc.csv  abmil_2losses_results.csv
evaluation/gated_abmil/results/virtues_new/: abmil_2losses_cv_folds.csv  (+2 more)
evaluation/gated_abmil/src/: run_abmil.py
evaluation/transformer_backbones/: generate_patches.py  modules_vit.py
evaluation/transformer_backbones/Configs/: Swin_small_config.yaml  ViT-L_config.yaml  ViT-M_config.yaml  ViT-S_config.yaml
multiplex_model/: data.py  decoder.py  equivariant_modules.py  losses.py  modules.py  run_utils.py  utils.py
multiplex_model/data/: __init__.py  dataset.py  transforms.py
multiplex_model/modules/: __init__.py  base_modules.py  convext.py  gp_covariance.py  immuvis.py  registry.py  resnet.py  swin.py  vit.py
multiplex_model/utils/: __init__.py  configuration.py  masking.py  optim.py  train_logging.py
notebooks/: decode_embeddings.ipynb
scripts/: train_masked.sh
tests/: test_kronecker_marker.py  test_training_integration.py
virtual_staining/: Virtual staining.ipynb
(+3 files in other folders)
